infrastructure/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.mdch-lab.dev
    secretName: prometheus.mdch-lab.dev-cert
  rules:
  - host: prometheus.mdch-lab.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
